--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,6 +9,7 @@ permissions:
 
 jobs:
   create-release:
+    name: Create release
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v6
